--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,50 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  scroll-behavior: smooth;
 }
+
+/* VARIABLES */
+:root {
+  --font-family: "Roboto", sans-serf;
+  --normal-font: 400;
+  --bold-font: 700;
+  --bolder-font: 900;
+  --bg-color: #fcfcfc;
+  --primary-color: #4756df;
+  --secondary-color: #ff7235;
+  --primary-shadow: #8b8eaf;
+  --secondary-shadow: #a17a69;
+  --bottom-margin: 0.5rem;
+  --bottom-margin-2: 1rem;
+  --line-height: 1.7rem;
+  --transition: 0.3s;
+ }
+
+ /* CSS RESETS */
+ * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  }
+
+  ul {
+    list-style-type: none;
+  }
+
+  a {
+    text-decoration: none;
+    color: var(--primary-color);
+  }
+
+  a:hover {
+    color: var(--secondary-color);
+  }
+
+  body {
+    font-family: var(--font-family);
+  } 
+
 
 /*
  * Remove text-shadow in selection highlight:
@@ -86,6 +129,213 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+  
+/* NAVIGATION SECTION */
+
+nav {
+  position: sticky;
+  top: 0;
+  left:0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 3.5rem;
+  background-color: var(--bg-color);
+  box-shadow: 0 3px 5px #222;
+}
+
+nav h1 {
+  color: var(--primary-color);
+}
+
+nav a {
+  color: var(--primary-color);
+  transition: var(--transition);
+}
+
+nav a:hover {
+  color: var(--secondary-color);
+  border-bottom: 2px dashed var(--secondary-color);
+}
+
+nav ul {
+  display: flex;
+  gap: 1.9rem;
+}
+
+nav ul li {
+  font-weight: var(--bold-font);
+}
+
+.burger-menu {
+  color: var(--primary-color);
+  font-size: 2rem;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  display: none;
+}
+
+/* HEADER SECTION */
+.header {
+  margin: 20px 0 0 50px;
+}
+
+.intro-section h1 {
+  font-size: 6.5rem;
+}
+
+.intro-section p {
+  margin: -50px 0 0 250px;
+  font-size: 3.5rem;
+}
+
+/* PROJECT SECTION */
+.projects {
+  background: var(--bg-color);
+  padding: 30px 0;
+  margin-top: 2rem;
+}
+
+.project-pic {
+  width: 65%;
+  height: 60%;
+}
+
+.projects-title h2 {
+  text-align: center;
+}
+
+.projects-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.project-title {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.project-container {
+  text-align: center;
+  width: 21.875rem;
+  padding: 1rem;
+}
+
+.project-container p {
+  padding: 0.4rem;
+}
+
+.project-title {
+  margin-bottom: var(--bottom-margin);
+}
+
+.project-details {
+  margin-bottom: var(--bottom-margin);
+}
+
+.project-card {
+  background-color: #fff;
+  border-radius: 11px;
+  box-shadow: 0 3px 10px var(--primary-shadow);
+  padding: 20px;
+  margin: 10px;
+}
+
+
+
+/* SKILLS SECTION */
+.skills {
+  max-width: 70rem;
+  margin: auto;
+  text-align: center;
+  margin: 88px 88px;
+}
+
+.skills-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20%;
+  border: #000 dashed 3px;
+  padding: 20px;
+}
+
+.skills h2 {
+  color: red;
+}
+
+
+/* ABOUT SECTION */
+.about {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2.5rem;
+  max-width: 68.75rem;
+  margin: auto;
+}
+
+.about img {
+  height: 37.5rem;
+  width: 37.5rem;
+}
+
+.bio {
+  width: 25rem;
+  padding: .625rem;
+  border-radius: 6px;
+  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+}
+
+.bio h1 {
+  margin-bottom: var(--bottom-margin);
+}
+
+.bio p {
+  line-height: var(--line-height);
+  padding: 0.3rem 0;
+}
+
+/* FOOTER */
+.footer {
+
+
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 16px;
+
+  justify-content: center;
+  align-items: flex-end;
+
+  border: 6px dashed pink;
+}
+
+.social {
+  width: 8%;
+  text-align: justify;
+}
+
+.marginLeft { 
+  margin-left: auto;
+  text-align: justify;
+  width: 8%;
+}
+
+.footer-1 {
+  color: red;
+  font-size: 4rem;
+  width: 50%;
+}
+
+.copyright {
+  color: yellow;
+}
+
+
 
 /* ==========================================================================
    Helper classes
