--- a/css/main.css
+++ b/css/main.css
@@ -379,6 +379,10 @@ nav ul li {
   text-align: justify;
 }
 
+.social-icons {
+  font-size: 5rem;
+}
+
 .marginLeft { 
   margin-left: auto;
   text-align: justify;
@@ -393,15 +397,24 @@ nav ul li {
   text-align: left;
 }
 
-.copyright {
-  color: yellow;
+.copyright h2 {
+  color: #191919;
+}
+
+.copyright-header {
+  margin-bottom: 13px;
 }
 
 .scroll-up {
   position: fixed;
-  right: 0.5%;
+  right: 1%;
   bottom: 3%;
   cursor: pointer;
+  font-size: 2rem;
+}
+
+.scroll-up:hover {
+  color:#ff7235;
 }
 
 .up-arrow {
