--- a/css/main.css
+++ b/css/main.css
@@ -140,10 +140,6 @@
     margin: 100px 0;
   }
 
-  body {
-    background-color: tomato;
-  }
-
   /* NAV + HEADER SECTIONS */
   nav {
     position: relative;
@@ -186,21 +182,13 @@
   }
 
   /* PROJECTS SECTION */
-  .projects-info {
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    flex-wrap: nowrap;
-    width: 100%;
-  }
-
   .projects-container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    margin: 100px;
-    width: 85%;
+    flex-direction: row;
+    width: 100%;
   }
   
   .project-pic {
@@ -228,6 +216,25 @@
     border-right: 0;
     border-left: 0;
     font-style: italic;
+  }
+
+  .project-pic {
+    border-radius: 33.33%;
+    width: 85%;
+    height: 80%;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */    
+     -webkit-filter: grayscale(100%);
+     -moz-filter: grayscale(100%);
+     -ms-filter: grayscale(100%);
+     filter: grayscale(100%);
+     filter: gray; /* IE 6-9 */
+  }
+  
+  .project-pic:hover {
+    -webkit-filter: none;
+    -moz-filter: none;
+    -ms-filter: none;
+    filter: none;
   }
 
   /* SKILLS SECTION */
@@ -259,6 +266,8 @@
     width: 3rem;
     height: 3rem;
   }
+
+
   
 
   
@@ -353,7 +362,7 @@
      Modify as content requires.
      ========================================================================== */
   
-     /*Mobile Query*/
+     /* MOBILE STYLES HERE */
      @media only screen and (max-width: 600px) {
       .header,
       .projects,
@@ -361,10 +370,6 @@
       .footer {
         max-width: 100%;
         margin: 100px 0;
-      }
-
-      body {
-        background-color: skyblue;
       }
 
       /* NAV + HEADER SECTIONS */
@@ -400,7 +405,8 @@
       }
 
       .projects-container {
-        margin-left: 15px;
+        margin-top: 60px;
+        margin-left: 5px;
         text-align: center;
       }
 
@@ -413,15 +419,98 @@
       }
 
       /* SKILLS SECTION */
+      .skills-wrapper {
+        margin-top: 50px;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        margin-left: 5px;
+      }
+
+      .ability-list h3 {
+        font-size: 3rem;
+        font-style: italic;
+        font-weight: 700;
+        margin-top: 60px;
+        margin-bottom: 5px;
+      }
+
+      .skills-wrapper li {
+        font-size: 3rem;
+        line-height: 44.44px;
+      }
 
       /* ABOUT SECTION */
+      .about {
+        margin-top: 222px;
+      }
+
+      .about img {
+        width: 66.66%;
+        margin-left: 20%;
+      }
+
+      .bio-text1 {
+        font-size: 1.75rem;
+        text-align: left;
+        margin-bottom: -18px;
+        margin-left: 10px;
+      }
+      
+      .bio-text2 {
+        font-size: 1.25rem;
+        text-align: right;
+        margin-top: -166px;
+        margin-left: 25px;
+        margin-right: 10px;
+        line-height: 20px;
+      }
 
       /* FOOTER */
+      .footer {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 0;
+        justify-content: center;
+        align-items: flex-start;
+        border: none;
+        margin-left: 10px;
+        color: #ff7235;
+      }
+      
+      .social {
+        width: 8%;
+        text-align: justify;
+        margin-left: 40%;
+      }
+      
+      .social-icons {
+        font-size: 5rem;
+        text-align: center;
+      }
+      
+      .footer-1 {
+        font-size: 3rem;
+        line-height: 66.66px;
+        width: 5%;
+        text-align: left;
+      }
+      
+      .copyright h2 {
+        color: #191919;
+        font-size: .75rem;
+        text-align: center;
+      }
+      
+      .copyright-header {
+        margin-bottom: 13px;
+      }
      }
 
 
      @media only screen and (min-width:768px) {
-      /*Tablet styles here*/
+      /* TABLET STYLES HERE*/
     
       /* GENERAL STYLES */
       .header,
@@ -432,18 +521,15 @@
         margin: 100px 0;
       }
 
-      body {
-        background-color: tomato;
-      }
-
       /* NAV + HEADER SECTIONS */
       .header {
         margin: 22px;
+        margin-bottom: 222px;
       }
       
       .intro-section h1 {
-        font-size: 6rem;
-        line-height: 60px;
+        font-size: 8rem;
+        line-height: 90px;
       }
 
       .intro-section p {
@@ -454,47 +540,155 @@
       /* PROJECTS SECTION */
       .projects {
         margin: 15px;
+        margin-top: 100px;
       }
 
       .introduction {
         font-size: 1.5rem;
         line-height: 20px;
         text-align: justify;
-        margin-bottom: 40px;
+        margin-bottom: 80px;
       }
 
       .project-pic {
         margin: 10px;
+        width: 80%;
       }
 
       .projects-container {
         text-align: center;
-        margin-left: 65px;
+        width: 70%;
+        margin-left: 122px;
       }
 
       .project-container {
-        margin: 0 15px;
+        margin: 0 0 35px 0;
       }
 
       .project-button {
         margin-bottom: 35px;
+        margin-top: 15px;
+      }
+
+      .project-title {
+        font-style: italic;
+        font-size: 1.5rem;
+        margin: 10px 10px;
       }
 
       .project-details {
+        font-size: 1.25rem;
       }
 
       /* SKILLS SECTION */
+      .skills-wrapper {
+        margin-top: 50px;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        margin-left: 5px;
+      }
+
+      .ability-list h3 {
+        font-size: 3rem;
+        font-style: italic;
+        font-weight: 700;
+        margin-top: 60px;
+        margin-bottom: 5px;
+      }
+
+      .skills-wrapper li {
+        font-size: 3rem;
+        line-height: 44.44px;
+      }
 
       /* ABOUT SECTION */
+      .about {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 0rem;
+        max-width: 68.75rem;
+        margin-top: 222px;
+        margin-bottom: 222px;
+      }
+      
+      .about img {
+        width: 100%;
+      }
+      
+      .bio {
+        width: 25rem;
+        padding: .625rem;
+        border-radius: 6px;
+      }
+      
+      .bio h1 {
+        margin-bottom: var(--bottom-margin);
+      }
+      
+      .bio p {
+        line-height: var(--line-height);
+        padding: 0.3rem 0;
+      }
+      
+      .bio-text1 {
+        font-size: 1.75rem;
+        text-align: right;
+        margin-left: 40px;
+      }
+      
+      .bio-text2 {
+        font-size: 1.25rem;
+        text-align: left;
+      }
 
       /* FOOTER */
-
+      .footer {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 288px;
+        justify-content: flex-end;
+        align-items: flex-end;
+        border: none;
+        margin-left: 30px;
+      }
+      
+      .social {
+        width: 8%;
+        text-align: justify;
+        margin-left: 40%;
+      }
+      
+      .social-icons {
+        font-size: 5rem;
+        text-align: center;
+      }
+      
+      .footer-1 {
+        color: orangered;
+        font-size: 3rem;
+        line-height: 66.66px;
+        width: 5%;
+        text-align: left;
+      }
+      
+      .copyright h2 {
+        color: #191919;
+        font-size: .75rem;
+        text-align: center;
+      }
+      
+      .copyright-header {
+        margin-bottom: 13px;
+      }
     }
   
     @media only screen and (min-width: 1200px) {  
-      /*Desktop styles here */  
+      /* DESKTOP STYLES HERE */  
        
-      /* General styles */
+      /* GENERAL STYLES */
       .header,
       .projects,
       .about,
@@ -503,9 +697,6 @@
         margin: 100px 0;
     }
 
-    body {
-      background-color: pink;
-    }
 
     /* GENERAL STYLES */
     .header,
@@ -514,10 +705,6 @@
     .footer {
       max-width: 100%;
       margin: 100px 0;
-    }
-
-    body {
-      background-color: pink;
     }
 
     /* NAV + HEADER SECTIONS */
@@ -531,43 +718,119 @@
     }
 
     .intro-section p {
-      margin: -50px 0 0 250px;
+      margin-bottom: 333px;
       font-size: 3.5rem;
     }
 
     /* PROJECTS SECTION */
-    .projects {
-      margin: 15px;
+    .projects-title {
+      text-align: center;
+      padding: 5%;
+      font-size: 60px;
+      font-style: italic;
     }
-
+    
     .introduction {
-      font-size: 1.5rem;
-      line-height: 20px;
-      text-align: justify;
-      margin-bottom: 40px;
+      font-size: 3rem;
+      font-style: italic;
+      line-height: 35px;
+      margin: 20px;
+      margin-bottom: 80px;
     }
-
-    .projects-info {
+    
+    .projects-container {
       display: flex;
       align-items: center;
-      justify-content:center;
-      flex-wrap: nowrap;
-      width: 100%;
+      justify-content: center;
+      flex-wrap: wrap;
+      flex-direction: row;
+      margin: 20px;
     }
-    
-    .projects-info p {
-      font-size: 3.33rem;
-      line-height: 50px;
+
+    .project-title {
+      text-align: center;
+      margin: 1rem;
       font-style: italic;
-      margin-left: 20px;
-      margin-right: 20px;
+      font-weight: 600;
     }
     
+    .project-container {
+      text-align: center;
+      width: 22rem;
+      padding: 2rem;
+    }
+
+    .project-container p {
+      padding: 0.4rem;
+      font-size: 1.2rem;
+    }
+        
     /* SKILLS SECTION */
+    .skills-wrapper {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: row;
+      gap: 5%;
+      border: none;
+      padding: 100px;
+      text-align: center;
+    }
+    
+    .ability-list h3 {
+      font-size: 3rem;
+      font-style: italic;
+      font-weight: 700;
+      padding-bottom: 88.88px;
+    }
+    
+    .skills-wrapper li {
+      font-size: 3rem;
+    }
 
     /* ABOUT SECTION */
 
     /* FOOTER */
+    .footer {
+      display: flex;
+      flex-direction: row-reverse;
+      gap: 16px;
+      justify-content: center;
+      align-items: flex-end;
+      border: none;
+    }
+    
+    .social {
+      width: 8%;
+      text-align: justify;
+    }
+    
+    .social-icons {
+      font-size: 5rem;
+    }
+    
+    .marginLeft { 
+      margin-left: auto;
+      text-align: justify;
+      width: 8%;
+    }
+    
+    .footer-1 {
+      color: orangered;
+      font-size: 4rem;
+      line-height: normal;
+      width: 50%;
+      text-align: left;
+      margin-left: 10px;
+    }
+    
+    .copyright h2 {
+      color: #191919;
+    }
+    
+    .copyright-header {
+      margin-bottom: 13px;
+    }
   }
   
   @media print,
