--- a/css/main.css
+++ b/css/main.css
@@ -744,7 +744,8 @@
       justify-content: center;
       flex-wrap: wrap;
       flex-direction: row;
-      margin: 20px;
+      gap: 20%;
+      margin: 15%;
     }
 
     .project-title {
