--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,10 @@
     padding: 1.5rem 3.5rem;
     background-color: var(--bg-color);
   }
+
+  .nav-icon {
+    width: 3%;
+  }
   
   nav h1 {
     color: var(--primary-color);
@@ -241,7 +245,7 @@
   }
 
   .project-pic {
-    border-radius: 33.33%;
+    border-radius: 10px;
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */    
      -webkit-filter: grayscale(100%);
      -moz-filter: grayscale(100%);
